--- a/desafios/d012/estilo/style.css
+++ b/desafios/d012/estilo/style.css
@@ -56,6 +56,10 @@ section {
     font-size: 2.5vw;
 }
 
+section > p {
+    padding-bottom: 2em;
+}
+
 section.normal {
     background-color: white;
     color: black;
@@ -64,12 +68,26 @@ section.normal {
 section.imagem {
     background-color: rgba(0, 0, 0, 0.495);
     color: white;
+    box-shadow: 0px 0px 4px black;
+    background-attachment: fixed;
+    background-position: bottom right;
 }
 
 section.imagem > p {
     background-color: rgba(0, 0, 0, 0.705);
     display: inline-block;
     padding: 10px;
+    text-shadow: 1px 1px 1px black;
+}
+
+section#img01 {
+    background-image: url('../imagens/background001.jpg');
+    background-size: cover;
+}
+
+section#img02 {
+    background-image: url('../imagens/background002.jpg');
+    background-size: cover;
 }
 
 footer {
